bozo-book-library/k8s/prod-ibmc-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bozo-book-library-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /ui(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: book-library-ui-svc
                port:
                  number: 80
          - path: /bookinfo(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: book-info-service-svc
                port:
                  number: 8080
          - path: /booklib(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: book-library-service-svc
                port:
                  number: 8080
